bela-sys/vendor/bela/include/Bela.h

#define BELA_MAJOR_VERSION 1
#define BELA_MINOR_VERSION 18
#define BELA_BUGFIX_VERSION 0
// RT-safe printing
// these functions are currently provided by xenomai.
// We put these declarations here so we do not have to include
// Xenomai specific files
int rt_printf(const char *format, ...) _ATTRIBUTE ((__format__ (__printf__, 1, 2)));
// these are more future-proof wrappers
int Bela_printf(const char *format, ...) _ATTRIBUTE ((__format__ (__printf__, 1, 2)));
/**
 * A type of Bela hardware.
 */
typedef enum
{
	BelaHw_NoHw = -1, ///< No hardware
	BelaHw_Bela, ///< Bela
	BelaHw_BelaMini, ///< Bela Mini
	BelaHw_GemStereo, ///< Gem Stereo
	BelaHw_GemMulti, ///< Gem Multi
	BelaHw_Salt, ///< Salt
	BelaHw_CtagFace, ///< Ctag Face
	BelaHw_CtagBeast, ///< Ctag Beast
	BelaHw_CtagFaceBela, ///< Ctag Face and Bela cape
	BelaHw_CtagBeastBela, ///< Ctag Beast and Bela cape
	BelaHw_BelaMiniMultiAudio, ///< Bela Mini with extra codecs
	BelaHw_BelaMiniMultiTdm, ///< Bela Mini with extra codecs and/or tdm devices
	BelaHw_BelaMultiTdm, ///< Bela with extra codecs and/or tdm devices
	BelaHw_BelaMiniMultiI2s, ///< Bela Mini with extra rx and tx I2S data lines.
	BelaHw_BelaEs9080, ///< A Bela cape with Es9080 EVB on top, all as audio
	BelaHw_BelaRevC, ///< A Bela cape rev C: Es9080 is used for analog outs
	BelaHw_Batch, ///< Dummy offline
} BelaHw;
typedef struct _BelaHwConfig
{
	float audioSampleRate;
	unsigned int audioInChannels;
	unsigned int audioOutChannels;
	unsigned int analogInChannels;
	unsigned int analogOutChannels;
	unsigned int digitalChannels;
} BelaHwConfig;
/**
 * Returns the configuration for a given BelaHw or `nullptr` if `hw` is
 * invalid.
 *
 * The returned pointer has to be deleted with Bela_HwConfig_delete().
 */
BelaHwConfig* Bela_HwConfig_new(BelaHw hw);
/**
 * Use this to delete a pointer returned by Bela_HwConfig_new()
 */
void Bela_HwConfig_delete(BelaHwConfig* cfg);
/**
 * Arguments to be passed to Bela_detectHw()
 */
typedef enum
{
	BelaHwDetectMode_Scan, ///< perform an automatic detection by scanning the peripherals and busses available, and cache value in `/run/bela/belaconfig`
	BelaHwDetectMode_Cache, ///< read cached value from `/run/bela/belaconfig` first. If it does not exist, fall back to #BelaHwDetectMode_Scan
	BelaHwDetectMode_CacheOnly, ///<read cached value from `/run/bela/belaconfig`. If it does not exist, return #BelaHw_NoHw
	BelaHwDetectMode_User, ///<read user-specified value from `~/.bela/belaconfig`. If it does not exist, fall back to #BelaHwDetectMode_Cache
	BelaHwDetectMode_UserOnly, ///<read user-specified value from `~/.bela/belaconfig`. If it does not exist, return #BelaHw_NoHw
} BelaHwDetectMode;
/** \endcond */

/**
 * \ingroup auxtask
 *
 * Xenomai priority level for audio processing. Maximum possible priority is 99.
 * In general, all auxiliary tasks should have a level lower than this unless for\
 * special purposes where the task needs to interrupt audio processing.
 */
#define BELA_AUDIO_PRIORITY		95
// Default volume levels

/**
 * \addtogroup levels
 *
 * @{
 */

/**
 * Default level of the line out in decibels. See Bela_setLineOutLevel().
 */
#define DEFAULT_LINE_OUT_LEVEL	0.0
/**
 * Default level of the Programmable Gain Amplifier in decibels.
 */
#define DEFAULT_PGA_GAIN 16
/**
 * Default level of the headphone output in decibels. See Bela_setHeadphoneLevel().
 */
#define DEFAULT_HP_LEVEL	-6.0
/** @} */

/**
 * Flag for BelaContext. If set, indicates the audio and analog buffers are interleaved.
 */
#define BELA_FLAG_INTERLEAVED				(1 << 0)	// Set if buffers are interleaved
/**
 * Flag for BelaContext. If set, indicates analog outputs persist for future frames.
 */
#define BELA_FLAG_ANALOG_OUTPUTS_PERSIST	(1 << 1)	// Set if analog/digital outputs persist for future buffers
/**
 * Flag for BelaContext. If set, indicates the user will be warned if an underrun occurs
 */
#define BELA_FLAG_DETECT_UNDERRUNS	(1 << 2)	// Set if the user will be displayed a message when an underrun occurs
/**
 * Flag for BelaContext. If set, it means that render() is called offline, i.e.: the audio time does not correspond to wall clock time.
 */
#define BELA_FLAG_OFFLINE (1 << 3)
struct option;
/**
 * \brief Detect what hardware we are running on.
 *
 *
 * \param mode How to perform the detection. The behaviour is described in #BelaHwDetectMode.
 */
BelaHw Bela_detectHw(BelaHwDetectMode mode);