bela-sys/src/bindings.rs

/* automatically generated by rust-bindgen 0.72.1 */

//! Bindings to the Bela core API, generated by `cargo xtask bindgen`
//! from Bela headers vendored from: board root@bela.local: Bela 1.18.0 (git HEAD fb362a5 + image overlay). Do not edit by hand.

pub const BELA_MAJOR_VERSION: u32 = 1;
pub const BELA_MINOR_VERSION: u32 = 18;
pub const BELA_BUGFIX_VERSION: u32 = 0;
pub const BELA_AUDIO_PRIORITY: u32 = 95;
pub const DEFAULT_LINE_OUT_LEVEL: f64 = 0.0;
pub const DEFAULT_PGA_GAIN: u32 = 16;
pub const DEFAULT_HP_LEVEL: f64 = -6.0;
pub const BELA_FLAG_INTERLEAVED: u32 = 1;
pub const BELA_FLAG_ANALOG_OUTPUTS_PERSIST: u32 = 2;
pub const BELA_FLAG_DETECT_UNDERRUNS: u32 = 4;
pub const BELA_FLAG_OFFLINE: u32 = 8;
pub type __time_t = ::core::ffi::c_long;
pub type __clockid_t = ::core::ffi::c_int;
pub type __syscall_slong_t = ::core::ffi::c_long;
unsafe extern "C" {
    pub fn rt_printf(format: *const ::core::ffi::c_char, ...) -> ::core::ffi::c_int;
}
unsafe extern "C" {
    pub fn Bela_printf(format: *const ::core::ffi::c_char, ...) -> ::core::ffi::c_int;
}
#[doc = "< No hardware"]
pub const BelaHw_NoHw: BelaHw = -1;
#[doc = "< Bela"]
pub const BelaHw_Bela: BelaHw = 0;
#[doc = "< Bela Mini"]
pub const BelaHw_BelaMini: BelaHw = 1;
#[doc = "< Gem Stereo"]
pub const BelaHw_GemStereo: BelaHw = 2;
#[doc = "< Gem Multi"]
pub const BelaHw_GemMulti: BelaHw = 3;
#[doc = "< Salt"]
pub const BelaHw_Salt: BelaHw = 4;
#[doc = "< Ctag Face"]
pub const BelaHw_CtagFace: BelaHw = 5;
#[doc = "< Ctag Beast"]
pub const BelaHw_CtagBeast: BelaHw = 6;
#[doc = "< Ctag Face and Bela cape"]
pub const BelaHw_CtagFaceBela: BelaHw = 7;
#[doc = "< Ctag Beast and Bela cape"]
pub const BelaHw_CtagBeastBela: BelaHw = 8;
#[doc = "< Bela Mini with extra codecs"]
pub const BelaHw_BelaMiniMultiAudio: BelaHw = 9;
#[doc = "< Bela Mini with extra codecs and/or tdm devices"]
pub const BelaHw_BelaMiniMultiTdm: BelaHw = 10;
#[doc = "< Bela with extra codecs and/or tdm devices"]
pub const BelaHw_BelaMultiTdm: BelaHw = 11;
#[doc = "< Bela Mini with extra rx and tx I2S data lines."]
pub const BelaHw_BelaMiniMultiI2s: BelaHw = 12;
#[doc = "< A Bela cape with Es9080 EVB on top, all as audio"]
pub const BelaHw_BelaEs9080: BelaHw = 13;
#[doc = "< A Bela cape rev C: Es9080 is used for analog outs"]
pub const BelaHw_BelaRevC: BelaHw = 14;
#[doc = "< Dummy offline"]
pub const BelaHw_Batch: BelaHw = 15;
#[doc = " A type of Bela hardware."]
pub type BelaHw = ::core::ffi::c_int;
#[repr(C)]
#[derive(Debug, Default, Copy, Clone)]
pub struct _BelaHwConfig {
    pub audioSampleRate: f32,
    pub audioInChannels: ::core::ffi::c_uint,
    pub audioOutChannels: ::core::ffi::c_uint,
    pub analogInChannels: ::core::ffi::c_uint,
    pub analogOutChannels: ::core::ffi::c_uint,
    pub digitalChannels: ::core::ffi::c_uint,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of _BelaHwConfig"][::core::mem::size_of::<_BelaHwConfig>() - 24usize];
    ["Alignment of _BelaHwConfig"][::core::mem::align_of::<_BelaHwConfig>() - 4usize];
    ["Offset of field: _BelaHwConfig::audioSampleRate"]
        [::core::mem::offset_of!(_BelaHwConfig, audioSampleRate) - 0usize];
    ["Offset of field: _BelaHwConfig::audioInChannels"]
        [::core::mem::offset_of!(_BelaHwConfig, audioInChannels) - 4usize];
    ["Offset of field: _BelaHwConfig::audioOutChannels"]
        [::core::mem::offset_of!(_BelaHwConfig, audioOutChannels) - 8usize];
    ["Offset of field: _BelaHwConfig::analogInChannels"]
        [::core::mem::offset_of!(_BelaHwConfig, analogInChannels) - 12usize];
    ["Offset of field: _BelaHwConfig::analogOutChannels"]
        [::core::mem::offset_of!(_BelaHwConfig, analogOutChannels) - 16usize];
    ["Offset of field: _BelaHwConfig::digitalChannels"]
        [::core::mem::offset_of!(_BelaHwConfig, digitalChannels) - 20usize];
};
pub type BelaHwConfig = _BelaHwConfig;
unsafe extern "C" {
    #[doc = " Returns the configuration for a given BelaHw or `nullptr` if `hw` is\n invalid.\n\n The returned pointer has to be deleted with Bela_HwConfig_delete()."]
    pub fn Bela_HwConfig_new(hw: BelaHw) -> *mut BelaHwConfig;
}
unsafe extern "C" {
    #[doc = " Use this to delete a pointer returned by Bela_HwConfig_new()"]
    pub fn Bela_HwConfig_delete(cfg: *mut BelaHwConfig);
}
#[doc = "< perform an automatic detection by scanning the peripherals and busses available, and cache value in `/run/bela/belaconfig`"]
pub const BelaHwDetectMode_Scan: BelaHwDetectMode = 0;
#[doc = "< read cached value from `/run/bela/belaconfig` first. If it does not exist, fall back to #BelaHwDetectMode_Scan"]
pub const BelaHwDetectMode_Cache: BelaHwDetectMode = 1;
#[doc = "<read cached value from `/run/bela/belaconfig`. If it does not exist, return #BelaHw_NoHw"]
pub const BelaHwDetectMode_CacheOnly: BelaHwDetectMode = 2;
#[doc = "<read user-specified value from `~/.bela/belaconfig`. If it does not exist, fall back to #BelaHwDetectMode_Cache"]
pub const BelaHwDetectMode_User: BelaHwDetectMode = 3;
#[doc = "<read user-specified value from `~/.bela/belaconfig`. If it does not exist, return #BelaHw_NoHw"]
pub const BelaHwDetectMode_UserOnly: BelaHwDetectMode = 4;
#[doc = " Arguments to be passed to Bela_detectHw()"]
pub type BelaHwDetectMode = ::core::ffi::c_uint;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct option {
    _unused: [u8; 0],
}
